--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "com.unity.collab-proxy": "1.15.7",
+    "com.unity.collab-proxy": "1.15.12",
     "com.unity.ide.rider": "2.0.7",
     "com.unity.ide.visualstudio": "2.0.14",
     "com.unity.ide.vscode": "1.2.4",
@@ -9,7 +9,8 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
-    "cz.naki3d.emt-sdk": "file:/home/ipw/Documents/emt-sdk.tgz",
+    "cz.naki3d.emt-sdk": "file:/home/mapi/git/emt-sdk/emt-sdk/bin/Debug/netstandard2.0/UnityPackage/emt-sdk.tgz",
+    "com.unity.nuget.newtonsoft-json": "3.0.1",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
